--- a/assets/css/classroom.css
+++ b/assets/css/classroom.css
@@ -1,8 +1,7 @@
 * {box-sizing: border-box;}
 
 body { 
-  background-image: url("../images/li-tzuni-507346-unsplash.jpg");
-  background-size: cover;
+  background-color: white;
   margin: 0;
   font-family: 'Barlow', sans-serif;
 }
