--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,10 @@ body {
  
 
 /* NAVBAR */
-ul {
+.nav-list {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    padding-top: 20px;
+    padding-left: 10px;
     overflow: hidden;
     background-color: white;
   }
@@ -25,15 +25,20 @@ ul {
     text-decoration: none;
   }
   
-  li {
+  #pay-tuition, #contact-us, #testimonials, #program-dropdown, #about-dropdown {
     float: right;
+    padding-right: 15px;
   }
+
+  /* li {
+      text-align: left;
+  } */
   
   li a, .dropbtn {
     display: inline-block;
     color: black;
     text-align: center;
-    padding: 45px 10px;
+    padding: 40px 10px;
     transition: 0.4s;
     text-decoration: none;
   }
@@ -49,7 +54,7 @@ ul {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -75,64 +80,99 @@ ul {
   .container {
     background: rgba(255, 255, 255, 0.9);
     text-align: center;
-    margin-top: 10%;
+    margin-top: 7%;
     margin-left: 10%;
+    margin-bottom: 10%;
     width: 80%;
     height: auto;
+    padding: 10px;
   }
   
   #main-body-title {
     font-family: 'Barlow', sans-serif;
+    font-size: 50px;
+    margin-bottom: 15px;
     color:  rgb(114, 182, 182);
+    text-align: center;
   }
   #pg-1, #pg-2 {
     font-family: 'Patrick Hand SC', cursive;
     letter-spacing: 2px;
+    line-height: 40px;
     font-size: 25px;
+    
   }
   #phone-number {
     color: rgb(114, 182, 182);
     font-size: 25px;
+    line-height: 40px;
   }
 
 /* Our Team Styling */
 #manage-team-title {
-    text-align: center;
     font-family: 'Barlow', sans-serif;
+    font-size: 50px;
+    margin-bottom: 15px;
     color:  rgb(114, 182, 182);
-    font-size: 45px;
+    text-align: center;
   }
 
   #center-dir-title {
     font-family: 'Barlow', sans-serif;
     color: rgb(245, 183, 67);
     font-size: 25px;
+    line-height: 40px;
   }
 
   img {
-      float: left;
-      margin-right: 20px;
+    float: left;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 
   #description-1{
     font-family: 'Patrick Hand SC', cursive;
     letter-spacing: 2px;
+    line-height: 40px;
     font-size: 25px;
+    text-align: left;
+    padding-left: 15px;
   }
+
  /* Curriculum Styling */
  #main-body-title {
-    text-align: center;
     font-family: 'Barlow', sans-serif;
+    font-size: 50px;
+    margin-bottom: 15px;
     color:  rgb(114, 182, 182);
+    text-align: center;
   }
+
   #curriculum-goals {
     font-family: 'Barlow', sans-serif;
-    color:  rgb(114, 182, 182);
+    color: rgb(245, 183, 67);
+    text-align: left;
+    margin-left: 50px;
+    margin-bottom: 10px;
+    font-size: 30px;
+    
   }
+
+  #curriculum-list {
+    list-style-type: disc;
+    margin-left: 75px;
+    text-align: left;
+    line-height: 30px;
+    color: rgb(170, 32, 32);
+    font-size: 18px;
+  }
+
   #pg-1, #pg-2 {
     font-family: 'Patrick Hand SC', cursive;
     letter-spacing: 2px;
     font-size: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 /* CLASSROOM STYLING */
 img {
@@ -161,23 +201,34 @@ img {
 
   /* INFANTS STYLING */
   #infant-title {
+    text-align: center;
     font-family: 'Barlow', sans-serif;
     color:  rgb(114, 182, 182);
-    text-align: center;
+    font-size: 50px;
   }
 
   #inf-1, #inf-2, #inf-3 {
     font-family: 'Patrick Hand SC', cursive;
+    text-align: center;
     letter-spacing: 2px;
     font-size: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    line-height: 40px;
   }
   #infant-benefits {
     font-family: 'Barlow', sans-serif;
+    color: rgb(245, 183, 67);
+    font-size: 25px;
     text-align: left;
-    color:  rgb(245, 183, 67);
-    font-size: 22px;
+    margin-left: 51px;
+    line-height: 40px;
   }
   #benefits {
-    font-family: 'Barlow', sans-serif;
-    color:  rgb(100, 96, 96);
+    list-style-type: disc;
+    margin-left: 75px;
+    text-align: left;
+    font-size: 18px;
+    color: rgb(170, 32, 32);
+    line-height: 30px;
   }
